.provarCaches/00D5f000005vwGkEAI/objects/rstk__taindirect__c.object
<CustomObject>
    <description>taindirect__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__taindirect_div__r.rstk__externalid__c +&quot;_&quot;+ rstk__taindirect_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>if(LEN(rstk__taindirect_code__c +&quot;(&quot;+ rstk__taindirect_desc__c +&quot;)&quot;) &gt;80,
 MID(UPPER(rstk__taindirect_code__c) +&quot;(&quot;+ rstk__taindirect_desc__c , 0, 79)+&quot;)&quot;,UPPER(rstk__taindirect_code__c) +&quot;(&quot;+ rstk__taindirect_desc__c +&quot;)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taindirect_code__c</fullName>
        <label>Indirect Labor Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taindirect_compensate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compensated Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__taindirect_desc__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taindirect_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>taindirects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Indirect Labor Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indirect Labor Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>